regras de negocio
